04-Service-and-Networking/examples/pod-wth-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: with-cm
  name: with-cm
spec:
  containers:
  - image: nginx
    name: with-cm
