04-Service-and-Networking/examples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-demo
spec:
  containers:
  - name: app
    image: busybox
    args:
    - /bin/sh
    - -c
    - |
      touch /tmp/healthy          # create healthy file
      sleep 60                    # stay healthy for 30 seconds
      rm -f /tmp/healthy          # simulate failure after 30s
      sleep 60                   # keep process alive (but probe will fail)
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 3
