04-Service-and-Networking/examples/itk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itk-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: itkannadigaru.in
    http:
      paths:
      - backend:
          service:
            name: app-1-service
            port:
              number: 80
        path: /app-1
        pathType: Exact
      - backend:
          service:
            name: app-2-service
            port:
              number: 80
        path: /app-2
        pathType: Exact
